--- a/docs/初.md
+++ b/docs/初.md
@@ -4,9 +4,7 @@
 
 这事又是我一拍脑袋就想出来的东西，既然都弄 Github Pages 了，又是人生中第一次打算留下点儿足迹，何不隆重一点，来搞个页面生成器呢。
 
-## 生成内容 [注]
-
-[注]: 斜体内容或许会做吧
+## 生成内容 _斜体内容或许会做吧_
 
 |源文档|生成网页|
 |:-----:|:--------:|
