--- a/docs/初.md
+++ b/docs/初.md
@@ -1,8 +1,11 @@
+---
+Category: 又在挖坑
+---
 # 平平无奇的 Hello World
 
 ## 前言
 
-这事又是我一拍脑袋就想出来的东西，既然都弄 Github Pages 了，又是人生中第一次打算留下点儿足迹，何不隆重一点，来搞个页面生成器呢。
+这事又是我一拍脑袋就想出来的东西，既然想弄 Github Pages 了，来搞个页面生成器算了。
 
 ## 生成内容 _斜体内容或许会做吧_
 
@@ -14,18 +17,45 @@
 |分类|~|
 |-|索引|
 |-| _评论区_ |
+|-| _代码着色_|
 
 * 主页 / 分类示图 （讲道理做到一起应该没什么问题）
   
   * 引用 Json 外部数据
-    * 类别 - `category.json`
     * 目录 - `directory.json`
+    * 类别 - `category.json`  
+        每个类别 - `<category name>-directory.json`
     * _可能会有其他的内容？_
   * 搜索标题
   * _搜索内容_
+
+* 记录
+  * Hash  
+      文件变动
+  * 生成器标识号 _或许合并到Hash中_  
+      模板变动、版本更新
+  * 分类  
+      分类变动
+
+## 文档额外内容
+
+此内容应位于文档开头
+
+``` c
+  ---
+  // 非文档内容
+  Category: <Cat1>,<Cat2>
+  ---
+  // 文档内容
+```
 
 ## 奇思妙想
 
 1. Page里访问同样托管在GitHub上的JSON文件
 2. 记录源文档的Hash以便增量生成
 3. _想到了再写_
+
+## 最后
+
+我这个记性想到的东西基本等不及写下来就忘光了还写个屁啊。  
+还是边写边写吧（？）。
